# demos

./: .gitignore  .gitmodules  LICENSE  README.md
ai/: README.md
ai/convnetjs/: Readme.md  bower.json
ai/matplotlib/: 3dplot.py  Intro.ipynb  README.md  helloplot.py
ai/numpy/: hello.py  network.py
cpp/: Input_output.cpp  Namespace.cpp  Preprocessors.cpp  READMD.md  a.out  array.cpp  control.cpp  data_type.cpp  enum.cpp  exception.cpp  file.cpp  function.cpp  function_Lambda.cpp  function_arguments.cpp  function_inline.cpp  function_parameter.cpp  hello_world.cpp  iterators.cpp  memory_dynamic.cpp  memory_leak.cpp  oop_object.cpp  operators.cpp  pointers.cpp  pointers_references.cpp  pthread  pthread.cpp  sample.txt  stl_binary_search.cpp  stl_deque.cpp  stl_list.cpp  stl_map.cpp  stl_multiset.cpp  stl_pair.cpp  stl_queue.cpp  stl_set.cpp  stl_vector.cpp  string.cpp  struct.cpp  struct_typedef.cpp  templates_class.cpp  (+2 more)
linux/: README.md
miscellaneous/hello-h265/avcodec_wrapper/: .gitignore  CMakeLists.txt  README.md  hwacc.cpp  main.cpp
miscellaneous/hello-h265/avcodec_wrapper/src/: videoDecoder.cpp  videoDecoder.h  videoEncoder.cpp  videoEncoder.h
opencv/: README.md
puerts/: README.md
robotics/: README.md
robotics/communication/hello_fastdds/examples/helloworld/: CMakeLists.txt  README.md  helloworld.cxx  helloworld.h  helloworld.idl  helloworldCdrAux.hpp  helloworldCdrAux.ipp  helloworldPubSubMain.cxx  helloworldPubSubTypes.cxx  helloworldPubSubTypes.h  helloworldPublisher.cxx  helloworldPublisher.h  helloworldSubscriber.cxx  helloworldSubscriber.h
(+708 files in other folders)
